--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -26,7 +26,7 @@ body {
 
 main {
   display: flex;
-  width: 80%;
+  width: 60%;
   height: 100%;
   margin: 0 auto;
   padding: 0 20px;
@@ -43,17 +43,56 @@ main {
 .text-center {
   text-align: center; }
 
+h1 {
+  font-size: 2em; }
+
+.hello {
+  height: 80%;
+  padding: 24px;
+  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between; }
+  .hello img {
+    width: 250px; }
+
 form {
   height: 100%;
   padding: 24px;
   background-color: #15c5bd;
   color: white; }
   form p {
-    margin-bottom: 24px; }
+    margin-bottom: 20px; }
   form label {
     display: block;
+    margin-bottom: 4px;
     font-weight: bold; }
   form .together > label {
     display: inline; }
+  form input[type=text], form input[type=email], form select {
+    width: 100%;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.2) inset;
+    font-family: Bellota, serif;
+    height: 32px;
+    padding: 0 12px; }
+  form textarea {
+    width: 100%;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.2) inset;
+    font-family: Bellota, serif;
+    height: 100px;
+    resize: vertical; }
+  form button {
+    width: 100%;
+    padding: 20px;
+    border: none;
+    background-color: white;
+    color: #15c5bd;
+    font-weight: bold;
+    font-size: 1.2em; }
 
 /*# sourceMappingURL=main.css.map */
