--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -5,5 +5,6 @@
 @include font-face(Bellota, /assets/fonts/Bellota-Italic, null, italic, otf);
 @include font-face(Bellota, /assets/fonts/Bellota-BoldItalic, bold, italic, otf);
 
-@import "partials/main";
-@import "partials/formulaire"; 
+@import "partials/_main";
+@import "partials/_hello";
+@import "partials/_formulaire";  
