--- a/stylesheet/main.scss
+++ b/stylesheet/main.scss
@@ -6,5 +6,5 @@
 @include font-face(Bellota, /assets/fonts/Bellota-BoldItalic, bold, italic, otf);
 
 @import "partials/_main";
-@import "partials/_hello";
-@import "partials/_formulaire";  
+@import "partials/_header"; 
+@import "partials/_formulaire"; 
