--- a/stylesheet/partials/_formulaire.scss
+++ b/stylesheet/partials/_formulaire.scss
@@ -1,6 +1,7 @@
 
 @mixin input-syle(){
     width: 100%;
+    padding: 0 12px;
 
     border-radius: 4px; 
     border: none;
@@ -10,54 +11,75 @@
     font-family: $font-main;
 }
 
-form{
-    height: 100%;
-
-    padding: 24px;
+.formulaire{
+    width: 100%;
+    height: 75vh;
+    padding: 40px;
 
     background-color: $color-main-alt;
+    border-top: 4px double $color-main;
+
     color: $color-main;
-
-    p{
-        margin-bottom: 20px;
-    }
     
-    label{
-        display: block;
-        margin-bottom: 4px;
-        font-weight: bold;
-    }
+    & > form{
+        display: grid;
 
-    .together > label{
-        display: inline;
-    }
+        grid-template: repeat(6, auto) / repeat(4, 1fr);
+        grid-gap: 32px 24px;
 
-    input[type=text], input[type=email], select{
-        @include input-syle();
+        .item{
+            grid-row: span 1;
+            grid-column: span 2;
 
-        height: 32px;
-        padding: 0 12px;
-    }
-
-    textarea{
-        @include input-syle();
-
-        height: 100px;
-        resize: vertical;
-    }
-
-    button{
-        width: 100%;
-        padding: 20px;
-
-        border: none;
-
-        background-color: $color-main;
-        color: $color-main-alt;
-
-        font: {
-            weight: bold;
-            size: 1.2em;
+            &.gender{
+                margin: auto 0;
+            }
+            &.large{
+                grid-column: span 4;
+            }
+            &.center{
+                grid-column: 2 / span 2;
+            }
+        }
+        
+        label{
+            display: block;
+            margin-bottom: 4px;
+            font-weight: bold;
+        }
+        
+        input[type=text], input[type=email], select{
+            @include input-syle();
+            
+            height: 32px;
+        }
+        
+        textarea{
+            @include input-syle();
+            
+            height: 100px;
+            resize: vertical;
+        }
+        
+        button{
+            width: 100%;
+            padding: 20px;
+            
+            border: none;
+            
+            background-color: $color-main;
+            color: $color-main-alt;
+            
+            font: {
+                weight: bold;
+                size: 1.2em;
+            }
+        }
+        
+        .error{
+            border: 1px solid $color-error;
+            // background-color: $color-error;
+            box-shadow: 1px 1px 2px 0px $color-error inset;
         }
     }
 }
