--- a/stylesheet/partials/_main.scss
+++ b/stylesheet/partials/_main.scss
@@ -1,5 +1,5 @@
 
-$color-background: #404040;
+$color-background: #303030;
 $color-main: white;
 $color-main-alt: #15c5bd;
 $color-error: red;
@@ -17,13 +17,16 @@ body{
     width: 100%;
     height: 100vh;
 
-    background-color: $color-background;
+    background-color: $color-main;
 }
 
 
 main{
     display: flex;
+    flex-direction: column;
+
     width: 60%;
+    max-width: 780px;
     height: 100%;
     margin: 0 auto;
     padding: 0 20px;
@@ -31,17 +34,6 @@ main{
     background-color: $color-main;
 
     font-family: $font-main;
-
-    section{
-        width: 50%;
-        height: 100%;
-    }
-    .left{
-        justify-self: flex-start;
-    }
-    .right{
-        justify-self: flex-end;
-    }
 }
 
 .text{
