--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -1,3 +1,18 @@
+.winnie-the-poe {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+#user-phone {
+  position: fixed;
+  top: 0;
+  left: -500px;
+}
+
 @font-face {
   font-family: "Bellota";
   src: url("/assets/fonts/Bellota-Regular.otf") format("opentype");
@@ -78,10 +93,15 @@ header .title h1 {
   margin-bottom: 24px;
 }
 
+header a {
+  cursor: default;
+}
+
 .formulaire {
   width: 100%;
   height: 75vh;
   padding: 40px;
+  overflow: auto;
   background-color: #15c5bd;
   border-top: 4px double white;
   color: white;
@@ -97,7 +117,7 @@ header .title h1 {
   .formulaire > form {
     display: grid;
     grid-template: repeat(6, auto)/repeat(4, 1fr);
-    grid-gap: 32px 24px;
+    grid-gap: 24px;
   }
 }
 
@@ -168,7 +188,8 @@ header .title h1 {
 .formulaire > form button {
   width: 100%;
   padding: 20px;
-  border: none;
+  border: 1px solid #15c5bd;
+  border-radius: 4px;
   background-color: white;
   color: #15c5bd;
   font-weight: bold;
@@ -179,5 +200,10 @@ header .title h1 {
   border-radius: 8px;
   background-color: red;
   color: white;
+}
+
+.formulaire > form .error .error_message {
+  margin-left: 12px;
+  font-size: 0.8em;
 }
 /*# sourceMappingURL=main.css.map */
